fix: Shadows were barely visible

--- a/metabeta/assets/styles/partials/_mb_space.scss
+++ b/metabeta/assets/styles/partials/_mb_space.scss
@@ -312,19 +312,19 @@ $grid-columns : 4;
 
 @mixin shadow($elevation:0, $direction: "bottom", $color: $color-gray-100) {
   @if $direction=="left" {
-    box-shadow: -$elevation/2 0 $elevation rgba($color, $opacity-xs), 0 0 1px rgba($color, $opacity-xs)
+    box-shadow: -$elevation/2 0 $elevation rgba($color, $opacity-m), 0 0 1px rgba($color, $opacity-m)
   }
 
   @if $direction=="right" {
-    box-shadow: $elevation/2 0 $elevation rgba($color, $opacity-xs), 0 0 1px rgba($color, $opacity-xs)
+    box-shadow: $elevation/2 0 $elevation rgba($color, $opacity-m), 0 0 1px rgba($color, $opacity-m)
   }
 
   @if $direction=="top" {
-    box-shadow: 0 -$elevation/2 $elevation rgba($color, $opacity-xs), 0 0 1px rgba($color, $opacity-xs)
+    box-shadow: 0 -$elevation/2 $elevation rgba($color, $opacity-m), 0 0 1px rgba($color, $opacity-m)
   }
 
   @else {
-    box-shadow: 0 $elevation/2 $elevation rgba($color, $opacity-xs), 0 0 1px rgba($color, $opacity-xs)
+    box-shadow: 0 $elevation/2 $elevation rgba($color, $opacity-m), 0 0 1px rgba($color, $opacity-m)
   }
 }
 
